# minimum-cut-of-an-undirected-graph

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Stoer_Wargner.cpp  cmake_install.cmake
docs/: readme.md
src/: main.cpp
terminal-edition/: graph.dot  lab02
